# vmm

./: CMakeLists.txt  README.md  build.sh
include/: list.h  predefs.h  result.h  stack.h  types.h  vma.h  vmm.h
src/: CMakeLists.txt  vma.c  vmm.c
test/: CMakeLists.txt  vmm_test.cpp
